2019-05-28  Peter Stephenson  <p.stephenson@samsung.com>

	* Jim Murphy: 44364: Doc/Zsh/intro.yo: refer to main zsh page in
	zshall doc.

2019-05-23  Oliver Kiddle  <okiddle@yahoo.co.uk>

	* unposted: Completion/Linux/Command/_iptables: remove spurious
	reference to nonexistent completion function

	* 44349: Completion/Linux/Command/_cryptsetup,
	Completion/X/Command/_x_utils, Completion/Linux/Command/_lsblk,
	Completion/Linux/Command/_ss, Completion/Linux/Command/_valgrind,
	Completion/Linux/Command/_strace, Completion/Unix/Command/_bash,
	Completion/Unix/Command/_dhclient, Completion/Unix/Command/_dig,
	Completion/Unix/Command/_entr, Completion/Unix/Command/_env,
	Completion/Unix/Command/_gem, Completion/Unix/Command/_gnutls,
	Completion/Unix/Command/_links, Completion/Unix/Command/_nm,
	Completion/Unix/Command/_objdump, Completion/Unix/Command/_ruby,
	Completion/Unix/Command/_sed, Completion/Unix/Command/_sqlite,
	Completion/Unix/Command/_ssh, Completion/Unix/Command/_tiff,
	Completion/Unix/Command/_tree, Completion/Unix/Command/_wget,
	Completion/Linux/Command/_ethtool: completion option updates

	* 44345: Src/text.c, Test/A01grammar.ztst: fix wordcode traversal
	where ! without a following command could result in a crash

2019-05-20  Oliver Kiddle  <okiddle@yahoo.co.uk>

	* 44307: Src/exec.c, Src/init.c, Src/params.c, Src/utils.c:
	allow for atoi() returning a negative number

	* 44308: Completion/Linux/Command/_modutils: update Linux
	modutils completion

2019-05-14  Oliver Kiddle  <okiddle@yahoo.co.uk>

	* 44284: Src/builtin.c: combination of -T and -p to typeset
	crashed the shell.

	* 44290: Src/jobs.c: job number exceeding int range and wrapping
	to a negative number crashed the shell.

	* 44291: Src/builtin.c: printf with argument specifier out of
	range for an int crashed the shell.

2019-05-14  Peter Stephenson  <p.stephenson@samsung.com>

	* 44296: Src/parse.c, Test/B02typeset.ztst: "typeset Q= {X}"
	crashed the shell.
